Notebookbar: Fix Tabs' overlapping into other elements
Make the whole nav bar scroll-able, specially important when still on
desktop but using small factor screen or simply when resizing window

--- a/loleaflet/css/menubar.css
+++ b/loleaflet/css/menubar.css
@@ -74,6 +74,15 @@
 	position: relative;
 	border-bottom: 1px solid var(--gray-light-bg-color);
 }
+.main-nav.hasnotebookbar {
+	height: 32px;
+	overflow: scroll hidden;
+	scrollbar-width: none;
+	-ms-scrollbar: none;
+}
+.main-nav.hasnotebookbar::-webkit-scrollbar {
+	height: 0;
+}
 .main-nav.hasnotebookbar:not(.readonly) {
 	/* background: var(--gray-light-bg-color); */
 	padding: 0px;
