--- a/loleaflet/css/notebookbar.css
+++ b/loleaflet/css/notebookbar.css
@@ -6,14 +6,13 @@
 }
 
 .ui-tabs.notebookbar {
-	display: inline-block;
+	display: inline-flex;
 	z-index: 999;
 	padding: 0px;
 	height: 100%;
 }
 
 .ui-tab.notebookbar {
-	float: left;
 	font-size: 16px;
 	font-family: var(--oxool-font);
 	line-height: normal;
